--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.11.16 07:14:54<br />
+<b>start</b> - 2022.11.16 11:11:55<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.9615384615384528<br />
@@ -148,7 +148,7 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.7999999999999972<br />
+USA_LakevillesSeaTurtle, not updated, 1.0<br />
 USA_LightningBoltInSapphire, not updated, 0.0<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.29999999999999716<br />
 Germany_Bullseye kihagyva (100%), <br />
@@ -241,19 +241,20 @@ UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
 UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
 UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
 UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
-UnitedKingdom_TheBunnyFields, <b>updated</b>, 129, <a href="https://www.munzee.com/map/gcpsyn7wf/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TheBunnyFields.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_EvolutionRainbow, <b>updated</b>, 114, <a href="https://www.munzee.com/map/gcpsvzrbd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_EvolutionRainbow.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_NorthfieldsLondonUndergroundStation, <b>updated</b>, 119, <a href="https://www.munzee.com/map/gcpubz19c/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_NorthfieldsLondonUndergroundStation.json" target="_blank">json</a><br />
-UnitedKingdom_ShadesGarden, <b>updated</b>, 63, <a href="https://www.munzee.com/map/gcpsvv5fn/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_ShadesGarden.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_AddingtonSunflowerGarden, <b>updated</b>, 134, <a href="https://www.munzee.com/map/gcpupqjhp/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_AddingtonSunflowerGarden.json" target="_blank">json</a><br />
-UnitedKingdom_SailingBoat, <b>updated</b>, 599, <a href="https://www.munzee.com/map/u10j6x1kx/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_SailingBoat.json" target="_blank">json</a><br />
-UnitedKingdom_HendonCircle, <b>updated</b>, 284, <a href="https://www.munzee.com/map/gcpv7n9j7/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HendonCircle.json" target="_blank">json</a> <b>100%</b><br />
-Australia_9thBirthdayInQueensland, <b>updated</b>, 136, <a href="https://www.munzee.com/map/r7hu2gjst/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_9thBirthdayInQueensland.json" target="_blank">json</a> <b>100%</b><br />
-Australia_MayPole, <b>updated</b>, 246, <a href="https://www.munzee.com/map/r7hgckc49/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_MayPole.json" target="_blank">json</a> <b>100%</b><br />
-Australia_PyramidOBadges, <b>updated</b>, 83, <a href="https://www.munzee.com/map/r7hu4rrrn/16.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_PyramidOBadges.json" target="_blank">json</a> <b>100%</b><br />
-Australia_QLD-Dingo, <b>updated</b>, 210, <a href="https://www.munzee.com/map/r7hu60rxr/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QLD-Dingo.json" target="_blank">json</a> <b>100%</b><br />
-Australia_HappyTenMunzee, <b>updated</b>, 351, <a href="https://www.munzee.com/map/r7hu2zgws/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_HappyTenMunzee.json" target="_blank">json</a> <b>100%</b><br />
-Australia_QLDPerm-Temp, <b>updated</b>, 153, <a href="https://www.munzee.com/map/r7hu62k18/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QLDPerm-Temp.json" target="_blank">json</a><br />
-Australia_UnicornInThePark, <b>updated</b>, 208, <a href="https://www.munzee.com/map/r7hugvyj7/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_UnicornInThePark.json" target="_blank">json</a> <b>100%</b><br />
-Germany_Berlin-HighVoltage, <b>updated</b>, 227, <a href="https://www.munzee.com/map/u336ws8sp/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_Berlin-HighVoltage.json" target="_blank">json</a> <b>100%</b><br />
-Germany_ColoursOfBerlin, <b>updated</b>, 618, <a href="https://www.munzee.com/map/u336z06cn/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_ColoursOfBerlin.json" target="_blank">json</a> <b>100%</b><br />
+UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
+UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
+UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
+UnitedKingdom_ShadesGarden kihagyva (100%), <br />
+UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.0<br />
+UnitedKingdom_SailingBoat, not updated, 0.0<br />
+UnitedKingdom_HendonCircle kihagyva (100%), <br />
+Australia_9thBirthdayInQueensland kihagyva (100%), <br />
+Australia_MayPole kihagyva (100%), <br />
+Australia_PyramidOBadges kihagyva (100%), <br />
+Australia_QLD-Dingo kihagyva (100%), <br />
+Australia_HappyTenMunzee kihagyva (100%), <br />
+Australia_QLDPerm-Temp, not updated, 0.0<br />
+Australia_UnicornInThePark kihagyva (100%), <br />
+Germany_Berlin-HighVoltage kihagyva (100%), <br />
+Germany_ColoursOfBerlin kihagyva (100%), <br />
+Germany_9thBirthdayInBerlin, <b>updated</b>, 330, <a href="https://www.munzee.com/map/u336ykze2/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_9thBirthdayInBerlin.json" target="_blank">json</a> <b>100%</b><br />
