--- a/feladat.html
+++ b/feladat.html
@@ -258,3 +258,4 @@ Australia_UnicornInThePark kihagyva (100%), <br />
 Germany_Berlin-HighVoltage kihagyva (100%), <br />
 Germany_ColoursOfBerlin kihagyva (100%), <br />
 Germany_9thBirthdayInBerlin, <b>updated</b>, 330, <a href="https://www.munzee.com/map/u336ykze2/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_9thBirthdayInBerlin.json" target="_blank">json</a> <b>100%</b><br />
+Germany_EvoInBerlinSteglitz, <b>updated</b>, 707, <a href="https://www.munzee.com/map/u336rn5c1/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_EvoInBerlinSteglitz.json" target="_blank">json</a> <b>100%</b><br />
