--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.11.16 11:11:55<br />
+<b>start</b> - 2022.11.17 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.9615384615384528<br />
 USA_PrattvilleTrillium, not updated, 0.45999999999999375<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Hungary_VotiveChurch, not updated, -44.25000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -257,22 +257,21 @@ Australia_QLDPerm-Temp, not updated, 0.0<br />
 Australia_UnicornInThePark kihagyva (100%), <br />
 Germany_Berlin-HighVoltage kihagyva (100%), <br />
 Germany_ColoursOfBerlin kihagyva (100%), <br />
-Germany_9thBirthdayInBerlin, <b>updated</b>, 330, <a href="https://www.munzee.com/map/u336ykze2/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_9thBirthdayInBerlin.json" target="_blank">json</a> <b>100%</b><br />
-Germany_EvoInBerlinSteglitz, <b>updated</b>, 707, <a href="https://www.munzee.com/map/u336rn5c1/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_EvoInBerlinSteglitz.json" target="_blank">json</a> <b>100%</b><br />
-Germany_BerlinEvoGarden-PotsdamerPlatz, <b>updated</b>, 623, <a href="https://www.munzee.com/map/u33d8qm65/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinEvoGarden-PotsdamerPlatz.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_Debrecen, <b>updated</b>, 533, <a href="https://www.munzee.com/map/u2rqsnxbs/14.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Debrecen.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_DeoCachingClan, <b>updated</b>, 249, <a href="https://www.munzee.com/map/u2rqs7b4m/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_DeoCachingClan.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_TocoskertsArrows, <b>updated</b>, 107, <a href="https://www.munzee.com/map/u2rq7shg2/15.91" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_TocoskertsArrows.json" target="_blank">json</a> <b>100%</b><br />
+Germany_9thBirthdayInBerlin kihagyva (100%), <br />
+Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
+Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
+Hungary_Debrecen kihagyva (100%), <br />
+Hungary_DeoCachingClan kihagyva (100%), <br />
+Hungary_TocoskertsArrows kihagyva (100%), <br />
 ----csoportok<br />
 ----városok<br />
 Australia_city_Brisbane, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_city_Brisbane.json" target="_blank">json</a><br />
 Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
-Hungary_city_Debrecen, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqs2c96/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Debrecen.json" target="_blank">json</a><br />
 UnitedKingdom_city_London, <b>updated</b>, <a href="https://www.munzee.com/map/gcpvn9cq4/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_London.json" target="_blank">json</a><br />
 ----felhasználók<br />
 123xilef_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u336ws8sp/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/123xilef_completed.json" target="_blank">json</a><br />
 BonnieB1_completed, <b>updated</b>, <a href="https://www.munzee.com/map/r7hg9jecp/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_completed.json" target="_blank">json</a><br />
 BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7hu62k18/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
 Peter1980_completed, <b>updated</b>, <a href="https://www.munzee.com/map/gcpsyt1y9/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Peter1980_completed.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.11.16 12:05:54<br />
-összesen 3239<br />
+<b>stop</b> - 2022.11.17 01:22:03<br />
+összesen 715<br />
