--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.11.17 01:10:08<br />
+<b>start</b> - 2022.11.18 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.9615384615384528<br />
@@ -145,133 +145,11 @@ USA_RobHeartsLou1 kihagyva (100%), <br />
 USA_RobHeartsLou2 kihagyva (100%), <br />
 USA_Corgi kihagyva (100%), <br />
 Poland_ZamekPiastow kihagyva (100%), <br />
-UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
+UnitedKingdom_TadleyJoyCon, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle, not updated, 1.0<br />
 USA_LightningBoltInSapphire, not updated, 0.0<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.29999999999999716<br />
 Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.9966777408637881<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove kihagyva (100%), <br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
-Australia_PiratePetesParrot kihagyva (100%), <br />
-UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
-UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
-UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
-USA_PiratesTreasure kihagyva (100%), <br />
-Australia_QueenslandKoala kihagyva (100%), <br />
-USA_GiraffeInGadsden kihagyva (100%), <br />
-USA_AnaheimSapphire kihagyva (100%), <br />
-Finland_HelsinkiColour kihagyva (100%), <br />
-USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
-Germany_SkylarkFeldlerche kihagyva (100%), <br />
-Netherlands_MysteryBikeField kihagyva (100%), <br />
-Australia_Brisbane, not updated, 0.0<br />
-Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.0<br />
-Germany_DiamantBerlin, not updated, 0.0<br />
-Germany_BerlinBear, not updated, 0.0<br />
-Germany_HonowWappen, not updated, 0.0<br />
-Canada_GatineauEvo, not updated, 0.0<br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.7125890736342058<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.0<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo kihagyva (100%), <br />
-Hungary_GreatChurch kihagyva (100%), <br />
-Canada_SpringInOttawa kihagyva (100%), <br />
-Canada_OttawaNewYears kihagyva (100%), <br />
-Canada_SummerInOttawa kihagyva (100%), <br />
-USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.14999999999999858<br />
-USA_ChristmasWreath kihagyva (100%), <br />
-USA_WinterOlympics2018 kihagyva (100%), <br />
-USA_R2D2 kihagyva (100%), <br />
-USA_TwinCitiesSnowman kihagyva (100%), <br />
-USA_SimpsonsDonut kihagyva (100%), <br />
-USA_AppleValleyEagle, not updated, 0.0<br />
-USA_DorothyToTheEmerald kihagyva (100%), <br />
-USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
-Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
-Hungary_GyorVgFarm kihagyva (100%), <br />
-Hungary_GyoriVasutiKert, not updated, 0.0<br />
-Hungary_Colors kihagyva (100%), <br />
-Hungary_TocoskertsArrows2 kihagyva (100%), <br />
-Hungary_TocoskertsArrows3, not updated, -69.0<br />
-Hungary_60Color kihagyva (100%), <br />
-Hungary_Cata-Joy kihagyva (100%), <br />
-Hungary_FlatDebrecen, not updated, 0.0<br />
-Hungary_Debrecen2202, not updated, 0.0<br />
-Hungary_EvolutionDebrecen kihagyva (100%), <br />
-Hungary_JewelSandwich, not updated, 0.0<br />
-Hungary_Cimbi kihagyva (100%), <br />
-Hungary_Picu kihagyva (100%), <br />
-Hungary_Honey kihagyva (100%), <br />
-Hungary_QR kihagyva (100%), <br />
-Hungary_DebreceniKereszt kihagyva (100%), <br />
-Hungary_60Flat kihagyva (100%), <br />
-UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
-UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
-UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
-UnitedKingdom_HeathrowFlatSquares, not updated, 0.0<br />
-UnitedKingdom_LondonUnderground, not updated, 0.0<br />
-UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
-UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
-UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
-UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
-UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
-UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
-UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
-UnitedKingdom_ShadesGarden kihagyva (100%), <br />
-UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.0<br />
-UnitedKingdom_SailingBoat, not updated, 0.0<br />
-UnitedKingdom_HendonCircle kihagyva (100%), <br />
-Australia_9thBirthdayInQueensland kihagyva (100%), <br />
-Australia_MayPole kihagyva (100%), <br />
-Australia_PyramidOBadges kihagyva (100%), <br />
-Australia_QLD-Dingo kihagyva (100%), <br />
-Australia_HappyTenMunzee kihagyva (100%), <br />
-Australia_QLDPerm-Temp, not updated, 0.0<br />
-Australia_UnicornInThePark kihagyva (100%), <br />
-Germany_Berlin-HighVoltage kihagyva (100%), <br />
-Germany_ColoursOfBerlin kihagyva (100%), <br />
-Germany_9thBirthdayInBerlin kihagyva (100%), <br />
-Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
-Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
-Hungary_Debrecen kihagyva (100%), <br />
-Hungary_DeoCachingClan kihagyva (100%), <br />
-Hungary_TocoskertsArrows kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Australia_city_Brisbane, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_city_Brisbane.json" target="_blank">json</a><br />
-Germany_city_Berlin, <b>updated</b>, <a href="https://www.munzee.com/map/u336vvjuz/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_city_Berlin.json" target="_blank">json</a><br />
-UnitedKingdom_city_London, <b>updated</b>, <a href="https://www.munzee.com/map/gcpvn9cq4/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_London.json" target="_blank">json</a><br />
-----felhasználók<br />
-123xilef_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u336ws8sp/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/123xilef_completed.json" target="_blank">json</a><br />
-BonnieB1_completed, <b>updated</b>, <a href="https://www.munzee.com/map/r7hg9jecp/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_completed.json" target="_blank">json</a><br />
-BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7hu62k18/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
-Peter1980_completed, <b>updated</b>, <a href="https://www.munzee.com/map/gcpsyt1y9/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Peter1980_completed.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.11.17 01:22:03<br />
-összesen 715<br />
+Finland_TampereElectric, <b>updated</b>, 668, <a href="https://www.munzee.com/map/udbvv1pgw/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_TampereElectric.json" target="_blank">json</a><br />
