--- a/feladat.html
+++ b/feladat.html
@@ -2,3 +2,11 @@
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, <b>updated</b>, 1387, <a href="https://www.munzee.com/map/u0vy8h29n/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_TresorICELimburg.json" target="_blank">json</a><br />
+USA_PrattvilleTrillium, not updated, 0.45999999999999375<br />
+Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
+Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Hungary_VotiveChurch, not updated, -44.25000000000001<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
+UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
+Slovakia_ChristmasStable, not updated, 0.0<br />
+Slovakia_LePetitPrince, <b>updated</b>, 410, <a href="https://www.munzee.com/map/u2s1yxmhk/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_LePetitPrince.json" target="_blank">json</a><br />
