--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.11.20 01:10:08<br />
+<b>start</b> - 2022.11.21 01:10:07<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
-Germany_TresorICELimburg, not updated, 0.0<br />
+Germany_TresorICELimburg, not updated, 0.07396449704143038<br />
 USA_PrattvilleTrillium, not updated, 0.45999999999999375<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -44.25000000000001<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.9661835748792313<br />
-USA_Turtle, <b>updated</b>, 650, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
+USA_Turtle, not updated, 0.17636684303351302<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.8799999999999955<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -55,7 +55,7 @@ Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
-Hungary_TaskasSmiley, <b>updated</b>, 211, <a href="https://www.munzee.com/map/u2mxgdrju/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_TaskasSmiley.json" target="_blank">json</a><br />
+Hungary_TaskasSmiley, not updated, 0.0<br />
 Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
 Slovakia_FlagOfSlovakia, not updated, 0.6500000000000021<br />
 Hungary_SurpriseAirline, not updated, 0.0<br />
@@ -150,7 +150,7 @@ Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle, not updated, 0.0<br />
 USA_LightningBoltInSapphire, not updated, 0.0<br />
-USA_AppleValley-EvolutionaryFlower, not updated, 0.29999999999999716<br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.0<br />
 USA_MontgomeryBaseball, not updated, 0.0<br />
@@ -245,7 +245,7 @@ UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
 UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
 UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
 UnitedKingdom_ShadesGarden kihagyva (100%), <br />
-UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.0<br />
+UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.7999999999999972<br />
 UnitedKingdom_SailingBoat, not updated, 0.0<br />
 UnitedKingdom_HendonCircle kihagyva (100%), <br />
 Australia_9thBirthdayInQueensland kihagyva (100%), <br />
@@ -266,5 +266,5 @@ Hungary_TocoskertsArrows kihagyva (100%), <br />
 ----csoportok<br />
 ----városok<br />
 ----felhasználók<br />
-<b>stop</b> - 2022.11.20 01:35:53<br />
-összesen 1545<br />
+<b>stop</b> - 2022.11.21 01:21:48<br />
+összesen 700<br />
