--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.11.23 01:10:12<br />
+<b>start</b> - 2022.11.24 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2958579881656931<br />
@@ -30,20 +30,20 @@ Netherlands_TeaAtGrandma, not updated, 1.0<br />
 Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
-USA_GreenvilleGreenWave, <b>updated</b>, 409, <a href="https://www.munzee.com/map/dp5u47vck/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleGreenWave.json" target="_blank">json</a><br />
+USA_GreenvilleGreenWave, not updated, 1.0<br />
 Australia_QueensGambit-Horse, not updated, 0.46728971962618004<br />
 USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
 USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
-USA_StAugustinePirateShip, not updated, 0.0<br />
+USA_StAugustinePirateShip, not updated, 0.17999999999999972<br />
 Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.9661835748792313<br />
-USA_Turtle, not updated, 0.7936507936507908<br />
+USA_Turtle, not updated, 0.9700176366843039<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.8799999999999955<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -148,7 +148,7 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.0<br />
+USA_LakevillesSeaTurtle, not updated, 0.20000000000000284<br />
 USA_LightningBoltInSapphire, not updated, 0.0<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
 Germany_Bullseye kihagyva (100%), <br />
@@ -175,7 +175,7 @@ Germany_SkylarkFeldlerche kihagyva (100%), <br />
 Netherlands_MysteryBikeField kihagyva (100%), <br />
 Australia_Brisbane, not updated, 0.0<br />
 Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.0<br />
+Germany_BerlinMunzeePin, not updated, 0.07000000000000028<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.0<br />
@@ -223,7 +223,7 @@ Hungary_TocoskertsArrows3, not updated, -69.0<br />
 Hungary_60Color kihagyva (100%), <br />
 Hungary_Cata-Joy kihagyva (100%), <br />
 Hungary_FlatDebrecen, not updated, 0.0<br />
-Hungary_Debrecen2202, not updated, 0.0<br />
+Hungary_Debrecen2202, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 Hungary_EvolutionDebrecen kihagyva (100%), <br />
 Hungary_JewelSandwich, not updated, 0.0<br />
 Hungary_Cimbi kihagyva (100%), <br />
@@ -265,7 +265,6 @@ Hungary_DeoCachingClan kihagyva (100%), <br />
 Hungary_TocoskertsArrows kihagyva (100%), <br />
 ----csoportok<br />
 ----városok<br />
-USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
 ----felhasználók<br />
-<b>stop</b> - 2022.11.23 01:27:16<br />
-összesen 1023<br />
+<b>stop</b> - 2022.11.24 01:24:23<br />
+összesen 852<br />
