--- a/feladat.html
+++ b/feladat.html
@@ -9,3 +9,25 @@ Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, <b>updated</b>, 983, <a href="https://www.munzee.com/map/u2s1uyuvm/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ChristmasStable.json" target="_blank">json</a><br />
+Slovakia_LePetitPrince, not updated, -0.29999999999999716<br />
+Australia_TicTacMunzee kihagyva (100%), <br />
+Hungary_FlatMattInBudapest, not updated, 0.0<br />
+USA_PrattvillePansy, not updated, 0.0<br />
+Hungary_MinerSymbol, not updated, 0.0<br />
+Hungary_Crossbow, not updated, 0.1700000000000017<br />
+USA_MunzeeLogo, not updated, 0.0<br />
+NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
+USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
+USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
+UnitedKingdom_LFCBebington, not updated, 0.3222341568206275<br />
+Finland_Nurmijarvi, not updated, 0.8999999999999915<br />
+Finland_Hyvinkaa, not updated, 0.0<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
+Netherlands_TeaAtGrandma, not updated, 1.0<br />
+Canada_Skull kihagyva (100%), <br />
+Netherlands_VlagEcht kihagyva (100%), <br />
+Netherlands_CittaslowEcht kihagyva (100%), <br />
+USA_GreenvilleGreenWave, <b>updated</b>, 400, <a href="https://www.munzee.com/map/dp5u47vck/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleGreenWave.json" target="_blank">json</a><br />
