--- a/feladat.html
+++ b/feladat.html
@@ -31,3 +31,16 @@ Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave, <b>updated</b>, 400, <a href="https://www.munzee.com/map/dp5u47vck/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleGreenWave.json" target="_blank">json</a><br />
+Australia_QueensGambit-Horse, not updated, 0.46728971962618004<br />
+USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
+USA_UtahBeehive, not updated, 0.0<br />
+Canada_DinosaurPark, not updated, 0.0<br />
+UnitedKingdom_BallochIceCream kihagyva (100%), <br />
+Australia_YoureAStar, not updated, 0.18000000000000682<br />
+USA_StAugustinePirateShip, not updated, 0.17999999999999972<br />
+Spain_WineOClock kihagyva (100%), <br />
+Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
+Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
+USA_USMGoldenEagles, not updated, 0.9661835748792313<br />
+USA_Turtle, <b>updated</b>, 659, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
