--- a/feladat.html
+++ b/feladat.html
@@ -1,14 +1,14 @@
-<b>start</b> - 2022.11.25 01:10:35<br />
+<b>start</b> - 2022.11.26 01:10:11<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2958579881656931<br />
 USA_PrattvilleTrillium, not updated, 0.45999999999999375<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Hungary_VotiveChurch, not updated, -44.25000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
-Slovakia_ChristmasStable, <b>updated</b>, 983, <a href="https://www.munzee.com/map/u2s1uyuvm/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_ChristmasStable.json" target="_blank">json</a><br />
+Slovakia_ChristmasStable, not updated, 0.0<br />
 Slovakia_LePetitPrince, not updated, -0.29999999999999716<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.0<br />
@@ -30,7 +30,7 @@ Netherlands_TeaAtGrandma, not updated, 1.0<br />
 Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
-USA_GreenvilleGreenWave, <b>updated</b>, 400, <a href="https://www.munzee.com/map/dp5u47vck/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GreenvilleGreenWave.json" target="_blank">json</a><br />
+USA_GreenvilleGreenWave, not updated, 0.0<br />
 Australia_QueensGambit-Horse, not updated, 0.46728971962618004<br />
 USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
 USA_UtahBeehive, not updated, 0.0<br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.9661835748792313<br />
-USA_Turtle, <b>updated</b>, 659, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
+USA_Turtle, not updated, 0.08818342151674585<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.8799999999999955<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -192,7 +192,7 @@ Hungary_RWG kihagyva (100%), <br />
 Hungary_Grail kihagyva (100%), <br />
 Hungary_DVTKInMiskolc, not updated, 0.0<br />
 Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.7125890736342058<br />
+Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
 Hungary_KodalysViolin kihagyva (100%), <br />
 Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
 Hungary_64color kihagyva (100%), <br />
@@ -265,8 +265,6 @@ Hungary_DeoCachingClan kihagyva (100%), <br />
 Hungary_TocoskertsArrows kihagyva (100%), <br />
 ----csoportok<br />
 ----városok<br />
-Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
-USA_city_Greenville, <b>updated</b>, <a href="https://www.munzee.com/map/dp5u4gsgr/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Greenville.json" target="_blank">json</a><br />
 ----felhasználók<br />
-<b>stop</b> - 2022.11.25 01:54:42<br />
-összesen 2647<br />
+<b>stop</b> - 2022.11.26 01:21:40<br />
+összesen 689<br />
