--- a/feladat.html
+++ b/feladat.html
@@ -265,3 +265,4 @@ Hungary_DeoCachingClan kihagyva (100%), <br />
 Hungary_TocoskertsArrows kihagyva (100%), <br />
 UnitedKingdom_WoodlandAnimals-Fox, <b>updated</b>, 111, <a href="https://www.munzee.com/map/gcpupqxt9/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WoodlandAnimals-Fox.json" target="_blank">json</a><br />
 UnitedKingdom_WoodlandAnimals-Badger, <b>updated</b>, 63, <a href="https://www.munzee.com/map/gcpupxnwb/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WoodlandAnimals-Badger.json" target="_blank">json</a><br />
+Canada_OttawaCancerRibbon, <b>updated</b>, 123, <a href="https://www.munzee.com/map/f2469w9ut/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_OttawaCancerRibbon.json" target="_blank">json</a> <b>100%</b><br />
