--- a/feladat.html
+++ b/feladat.html
@@ -281,3 +281,16 @@ Hungary_MaXGarden, <b>updated</b>, 64, <a href="https://www.munzee.com/map/u2mnd
 Hungary_Crossbow_Tatabanya, <b>updated</b>, 703, <a href="https://www.munzee.com/map/u2mne32nt/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Crossbow_Tatabanya.json" target="_blank">json</a><br />
 Hungary_StroopwafelInvasionInFelsogalla, <b>updated</b>, 92, <a href="https://www.munzee.com/map/u2mn7yzxz/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_StroopwafelInvasionInFelsogalla.json" target="_blank">json</a><br />
 Hungary_SZTE, <b>updated</b>, 100, <a href="https://www.munzee.com/map/u2nr474hq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_SZTE.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+Australia_city_Brisbane, <b>updated</b>, <a href="https://www.munzee.com/map/r7hug0cqd/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_city_Brisbane.json" target="_blank">json</a><br />
+Canada_city_Ottawa, <b>updated</b>, <a href="https://www.munzee.com/map/f2469dret/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_city_Ottawa.json" target="_blank">json</a><br />
+Hungary_city_Szeged, <b>updated</b>, <a href="https://www.munzee.com/map/u2nr55dy9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Szeged.json" target="_blank">json</a><br />
+Hungary_city_Tatabanya, <b>updated</b>, <a href="https://www.munzee.com/map/u2mndxhne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Tatabanya.json" target="_blank">json</a><br />
+UnitedKingdom_city_London, <b>updated</b>, <a href="https://www.munzee.com/map/gcpvn9cq4/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_city_London.json" target="_blank">json</a><br />
+----felhasználók<br />
+BonnieB1_empty, <b>updated</b>, <a href="https://www.munzee.com/map/r7hu62k18/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/BonnieB1_empty.json" target="_blank">json</a><br />
+Jeffeth_completed, <b>updated</b>, <a href="https://www.munzee.com/map/f2469zt39/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Jeffeth_completed.json" target="_blank">json</a><br />
+Norbee97_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2rq7fsvq/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_empty.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.11.27 10:57:40<br />
+összesen 6928<br />
