--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.01 01:10:10<br />
+<b>start</b> - 2022.12.01 06:02:14<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.36982248520710925<br />
@@ -274,5 +274,10 @@ Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, not updated, 0.25<br />
-Germany_GeorgeTheFab42, <b>updated</b>, 713, <a href="https://www.munzee.com/map/u0w7yp6un/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GeorgeTheFab42.json" target="_blank">json</a><br />
-Germany_PaulTheFab43, <b>updated</b>, 1108, <a href="https://www.munzee.com/map/u0w7yrd1n/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_PaulTheFab43.json" target="_blank">json</a><br />
+Germany_GeorgeTheFab42, not updated, 0.07000000000000028<br />
+Germany_PaulTheFab43, not updated, 0.0<br />
+Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
+Hungary_MaXGarden kihagyva (100%), <br />
+Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
+Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
+Hungary_SZTE, <b>updated</b>, 110, <a href="https://www.munzee.com/map/u2nr474hq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_SZTE.json" target="_blank">json</a><br />
