--- a/feladat.html
+++ b/feladat.html
@@ -281,3 +281,4 @@ Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
 Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
 Hungary_SZTE, <b>updated</b>, 110, <a href="https://www.munzee.com/map/u2nr474hq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_SZTE.json" target="_blank">json</a><br />
+Hungary_MarioInVac, <b>updated</b>, 179, <a href="https://www.munzee.com/map/u2mxg2dwj/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MarioInVac.json" target="_blank">json</a><br />
