--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.01 06:02:14<br />
+<b>start</b> - 2022.12.01 07:04:49<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.36982248520710925<br />
@@ -51,7 +51,7 @@ Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 1.0<br />
 Belgium_KnokkeHeist, not updated, 0.25<br />
 Hungary_Evolution, not updated, 0.8333333333333286<br />
-Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
+Netherlands_WapenVanEnkhuizen, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.0<br />
@@ -280,5 +280,6 @@ Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
 Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
-Hungary_SZTE, <b>updated</b>, 110, <a href="https://www.munzee.com/map/u2nr474hq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_SZTE.json" target="_blank">json</a><br />
-Hungary_MarioInVac, <b>updated</b>, 179, <a href="https://www.munzee.com/map/u2mxg2dwj/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_MarioInVac.json" target="_blank">json</a><br />
+Hungary_SZTE, not updated, 0.0<br />
+Hungary_MarioInVac, not updated, 0.0<br />
+Hungary_LovagokKertje, <b>updated</b>, 201, <a href="https://www.munzee.com/map/u2mw68gkq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_LovagokKertje.json" target="_blank">json</a> <b>100%</b><br />
