--- a/feladat.html
+++ b/feladat.html
@@ -283,3 +283,4 @@ Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
 Hungary_SZTE, not updated, 0.0<br />
 Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje, <b>updated</b>, 201, <a href="https://www.munzee.com/map/u2mw68gkq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_LovagokKertje.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_ShieldKecskemet, <b>updated</b>, 73, <a href="https://www.munzee.com/map/u2q4bk348/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_ShieldKecskemet.json" target="_blank">json</a><br />
