--- a/feladat.html
+++ b/feladat.html
@@ -301,3 +301,18 @@ Slovakia_1stDayEvo, <b>updated</b>, 71, <a href="https://www.munzee.com/map/u2s1
 Slovakia_BosniaFlagInBratislava, <b>updated</b>, 143, <a href="https://www.munzee.com/map/u2s1yrt3z/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_BosniaFlagInBratislava.json" target="_blank">json</a> <b>100%</b><br />
 Slovakia_AgentSun, <b>updated</b>, 160, <a href="https://www.munzee.com/map/u2s1zptrk/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_AgentSun.json" target="_blank">json</a> <b>100%</b><br />
 Slovakia_CandleTombstone, <b>updated</b>, 104, <a href="https://www.munzee.com/map/u2s1zhnn4/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_CandleTombstone.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+Hungary_city_Budapest, <b>updated</b>, <a href="https://www.munzee.com/map/u2mw1keu9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Budapest.json" target="_blank">json</a><br />
+Hungary_city_Kecskemet, <b>updated</b>, <a href="https://www.munzee.com/map/u2mfzfbg7/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Kecskemet.json" target="_blank">json</a><br />
+Hungary_city_Szeged, <b>updated</b>, <a href="https://www.munzee.com/map/u2nr55dy9/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Szeged.json" target="_blank">json</a><br />
+Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
+----felhasználók<br />
+Neloras_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yt9t7/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_all.json" target="_blank">json</a><br />
+Neloras_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yzv55/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_completed.json" target="_blank">json</a><br />
+Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
+Rikitan_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vv279/15.0002" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_all.json" target="_blank">json</a><br />
+Rikitan_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vyxmx/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_completed.json" target="_blank">json</a><br />
+Rikitan_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yxmhk/15.0012" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Rikitan_empty.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.12.01 08:22:04<br />
+összesen 4635<br />
