--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.12.02 01:10:07<br />
+<b>start</b> - 2022.12.03 01:10:09<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.36982248520710925<br />
@@ -20,7 +20,7 @@ NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.3222341568206275<br />
-Finland_Nurmijarvi, <b>updated</b>, 188, <a href="https://www.munzee.com/map/ud9xe05ek/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Nurmijarvi.json" target="_blank">json</a><br />
+Finland_Nurmijarvi, not updated, 0.0<br />
 Finland_Hyvinkaa, not updated, 0.0<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
@@ -43,13 +43,13 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.6038647342995169<br />
-USA_Turtle, not updated, 0.35273368606701894<br />
+USA_Turtle, not updated, 0.4409171075837648<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.0<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
 Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 1.0<br />
-Belgium_KnokkeHeist, not updated, 0.25<br />
+Belgium_KnokkeHeist, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 Hungary_Evolution, not updated, 0.8333333333333286<br />
 Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
 USA_OfficerDown, not updated, 0.0<br />
@@ -274,35 +274,4 @@ Canada_JeffsFarm kihagyva (100%), <br />
 UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
 Germany_JohnTheFab41 kihagyva (100%), <br />
 Germany_RingoTheFab4, not updated, 0.25<br />
-Germany_GeorgeTheFab42, not updated, 0.07000000000000028<br />
-Germany_PaulTheFab43, not updated, 0.0<br />
-Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
-Hungary_MaXGarden kihagyva (100%), <br />
-Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
-Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
-Hungary_SZTE, not updated, 0.0<br />
-Hungary_MarioInVac, not updated, 0.0<br />
-Hungary_LovagokKertje kihagyva (100%), <br />
-Hungary_ShieldKecskemet, not updated, 0.0<br />
-Hungary_Mini kihagyva (100%), <br />
-Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
-Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
-Hungary_EyesInTheNight kihagyva (100%), <br />
-Hungary_PomazLocomotiv kihagyva (100%), <br />
-Slovakia_Bratislava kihagyva (100%), <br />
-Slovakia_ChilliKiller, not updated, 0.0<br />
-Slovakia_LakeLighthousePainting, not updated, 0.0<br />
-Slovakia_ChargeBratislava kihagyva (100%), <br />
-Slovakia_VirtualJoy kihagyva (100%), <br />
-Slovakia_ElectricLetters kihagyva (100%), <br />
-Slovakia_DevinCastle kihagyva (100%), <br />
-Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
-Slovakia_1stDayEvo kihagyva (100%), <br />
-Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
-Slovakia_AgentSun kihagyva (100%), <br />
-Slovakia_CandleTombstone kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-<b>stop</b> - 2022.12.02 01:26:12<br />
-összesen 964<br />
+Germany_GeorgeTheFab42, <b>updated</b>, 732, <a href="https://www.munzee.com/map/u0w7yp6un/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GeorgeTheFab42.json" target="_blank">json</a><br />
